made the test case checker check for inputs as well.

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -255,7 +255,83 @@ Creates a new Multiple Choice card in deck `german`, with the answer as the firs
 
 === Add new Javascript card or Java Card
 
-(TBC)
+****
+In our app, you can make a flash card that asks you to write code and test it against test cases that you have supplied during card creation. Two languages are available for use: Java and JavaScript. Currently, you need to use the GUI to make these cards.
+
+To begin creating either card:
+
+- Click on an existing deck.
+- In the deck display window click on `Change name/Add question` to add a new card.
+- In the card creation window, select either `Java` or `JavaScript`.
+
+To make a Java Card
+
+- Enter a question that tells you what code to write. An example question would be:
+
+    Write a program to read in strings and print out each string with all alphabetical characters in uppercase.
+
+- Test cases for Java Cards are as follows:
+** Enter input that you want to be fed into your program into the box that says `Enter input...`. +
+
+Example (for the question above):
+
+     helloWorld
+     12345myName
+     letters&&Numbers
+
+** Then, in the box to the right that says `Enter expected output`, type what your program should print out "to the console". +
+
+Example (for the question above):
+
+      HELLOWORLD
+      12345MYNAME
+      LETTERS&&NUMBERS
+
+
+* Do not put whitespace behind or in front of each line of your input or output if the whitespace is not intended. The Java Card's output comparison checker is sensitive to any differences between your program's output and expected output.
+* You cannot enter empty outputs but an empty input is ok.
+* To enter another test case, click on `Add` and a new row of input and output boxes will appear.
+* To delete a test case row, click `Delete`.
+* Once your test cases are all typed in, click on `Add Card` and your deck will have your brand new Java Card.
+
+To make a JavaScript Card
+
+- Enter a question that tells you what code to write. +
+
+
+  Task: Write a function called addExclam(str) that takes in a string and adds a "!". Input: A string. Output: The string with a "!" at the back.
+
+- Test cases for JavaScript Cards are as follows:
+** JavaScript cards use an `assert` function to check if your function is correct. The first argument to the assert is a call to your function. The second argument to the assert is the output you expect your function to give.
+** Enter your asserts like so: +
+
+    assert(addExclam("Hello"), "Hello!");
+    assert(addExclam("123"), "123!");
+    assert(addExclam("I love you!"), "I love you!!");
+
+What `assert(addExclam("Hello"), "Hello!")` does is to compare the result of `addExclam("Hello")` against your expected output `"Hello!"` to see if they are exactly equal.
+
+* If your assert calls the wrong function like `addexclam` instead of `addExclam`, your asserts will fail.
+* If your asserts have the wrong expected output in the first place such as `assert(addExclam("I love you!"), "I love you!");` where the expected output is missing an additional exclamation mark, your asserts will fail even if you have the correct function.
+* Advanced use case: You can technically write multiple functions in the same JavaScript Card program. Then just put in asserts that call each function: +
+
+    assert(addExclam("Hello"), "Hello!");
+    assert(addFive(123), 128);
+    assert(addExclam("I love you!"), "I love you!!");
+
+and if you write both the correct `addExclam` and `addFive` functions, the card can test both functions for you. +
+
+
+       Example program:
+
+       const addExclam = str => str + "!";
+       const addFive = i => i + 5;
+
+** The card expects you to write asserts as shown and nothing else. If you write checks like `addOne(1) == 2`, the JavaCard's `assert` function cannot be used to check how many test cases you have, and how many you passed.
+** Once your test cases are all typed in, click on `Add Card` and your deck will have your brand new JavaScript Card.
+
+** Once you have clicked `Add Card`, click on `Done` to finish your card creating session. You are now ready to test yourself.
+****
 
 
 // tag::edit[]
