--- a/docs/team/elsakoh.adoc
+++ b/docs/team/elsakoh.adoc
@@ -60,8 +60,8 @@ This section details all of my contributions to the project, and showcases how I
 *** Enhanced the styling for the dropdown menu of autocomplete  (Pull request https://github.com/AY1920S1-CS2103T-T12-1/main/pull/168[#168])
 
 ** Documentation
-*** Wrote parts of the +Work User Guide relating to https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#quick-start[Quick Start],https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#introduction[Introduction], https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#autocomplete[Autocomplete] and https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#command-summary[Command Summary].
-*** Wrote parts of the +Work Developer Guide relating to https://github.com[Autocomplete] and https://github.com[Architecture].
+*** Wrote parts of the +Work User Guide relating to https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#quick-start[Quick Start], https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#introduction[Introduction], https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#autocomplete[Autocomplete] and https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#command-summary[Command Summary].
+*** Wrote parts of the +Work Developer Guide relating to https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#autocomplete[AutoComplete] and https://ay1920s1-cs2103t-t12-1.github.io/main/UserGuide.html#architecture[Architecture].
 
 ** Community
 *** Reported bugs and suggestions for other teams in the class (https://github.com/elsakoh/ped[report])
